# geo-service

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
geo_cond_service/: Dockerfile  dependencies.py  main.py
geo_cond_service/repositories/implementations/: geo_cond_repository.py
geo_cond_service/repositories/interfaces/: iface_geo_cond_repository.py
geo_cond_service/routes/: geo_cond_router.py
geo_cond_service/schemas/: geo_cond_schemas.py
geo_cond_service/services/: geo_cond_service.py
geo_cond_service/tests/: test_geo_cond_service.py
geo_data_service/: Dockerfile  geo_crud.py  geo_db.py  geo_models.py  pyproject.toml  test.py
geo_service/: Dockerfile  dependencies.py  main.py  pyproject.toml
geo_service/data/: db.py  geo_models.py
geo_service/repositories/implementations/: geo_repo.py
geo_service/repositories/interfaces/: iface_geo_repo.py
geo_service/routes/: geo_router.py
geo_service/schemas/: geo_schemas.py
geo_service/services/: geo_service.py
geo_service/tests/: test_geo_service.py
shared/models/: geo_cond_models.py
tests/: conftest.py  test_geo_cond_service.py  test_geo_service.py
