[project]
name = "microservices-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    # Web framework
    "fastapi==0.116.1",
    "starlette==0.47.2",
    "uvicorn==0.35.0",

    # Database / ORM
    "SQLAlchemy==2.0.43",
    "GeoAlchemy2==0.18.0",
    "greenlet==3.2.4",

    # Networking / HTTP
    "httpx==0.28.1",
    "httpcore==1.0.9",
    "h11==0.16.0",
    "requests==2.32.4",

    # Data / Geo
    "numpy==2.3.2",
    "pandas==2.3.1",
    "geopandas==1.1.1",
    "shapely==2.1.1",
    "pyproj==3.7.2",
    "pyogrio==0.11.1",
    "geojson==3.2.0",

    # Pydantic & typing
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "annotated-types==0.7.0",
    "typing_extensions==4.14.1",
    "typing-inspection==0.4.1",

    # Utilities
    "click==8.2.1",
    "colorama==0.4.6",
    "packaging==25.0",
    "pluggy==1.6.0",
    "iniconfig==2.1.0",
    "six==1.17.0",
    "sniffio==1.3.1",

    # Text / Parsing
    "Pygments==2.19.2",
    "charset-normalizer==3.4.3",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "tzdata==2025.2",

    # Security / SSL
    "certifi==2025.8.3",
    "idna==3.10",
    "urllib3==2.5.0",
    "anyio==4.10.0"
]
