[project]
name = "geo-data-service"
version = "0.1.0"
description = "Service for updating and maintaining db with geo-data."
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "requests>=2.32.4",
    "uvicorn>=0.35.0",
    "geoalchemy2>=0.14.4",
    "asyncpg>=0.30.0",
    "SQLAlchemy>=2.0.32",
    "OSMPythonTools>=0.3.3",
    "plpygis"
]
